# folder-organizer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/folder_organizer/: cli.py  rules.json  rules_dev.json
tests/: test_cli.py
